--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,10 @@
 		<item>@string/opcion_crear</item>
 		<item>@string/opcion_listar</item>
 	</string-array>
+
+	<string name="error_cedula">Digite la cédula</string>
+	<string name="error_nombre">Digite el nombre</string>
+	<string name="error_apellido">Digite el apellido</string>
+
 </resources>
 
