--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
 	<string name="error_cedula">Digite la cédula</string>
 	<string name="error_nombre">Digite el nombre</string>
 	<string name="error_apellido">Digite el apellido</string>
+	<string name="numero">No.</string>
 
 </resources>
 
