--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -3,4 +3,15 @@
 	<string name="app_name">People</string>
 	<string name="opcion_crear">Create</string>
 	<string name="opcion_listar">List</string>
+	<string name="titulo">Create People</string>
+	<string name="cedula">Identification</string>
+	<string name="nombre">Name</string>
+	<string name="apellido">Lastname</string>
+	<string name="guardar">Save</string>
+	<string name="Limpiar">Clear</string>
+	<string name="error_cedula">Type Identification</string>
+	<string name="error_nombre">Type Name</string>
+	<string name="error_apellido">Type Lastname</string>
+	<string name="numero">No.</string>
+	<string name="mensaje_guardado">Person saves correctly</string>
 </resources>
